--- a/src/features/contacts/components/AgGridWrapper/AgGridWrapper.scss
+++ b/src/features/contacts/components/AgGridWrapper/AgGridWrapper.scss
@@ -354,5 +354,5 @@
 //$ag-mat-icons-path: "~ag-grid/src/styles/material-icons/";
 //$ag-icons-path: "~ag-grid/src/styles/icons/";
 
-// @import "~ag-grid-community/dist/styles/ag-grid";
-// @import "~ag-grid-community/dist/styles/ag-theme-material";
+@import "~ag-grid-community/dist/styles/ag-grid";
+@import "~ag-grid-community/dist/styles/ag-theme-material";
