Package to library

--- a/src/features/contacts/components/AgGridWrapper/AgGridWrapper.scss
+++ b/src/features/contacts/components/AgGridWrapper/AgGridWrapper.scss
@@ -183,7 +183,7 @@
     float: right;
     cursor: pointer;
     position: relative;
-    background: url("../../../../icon-invite-dark.svg") no-repeat center/80%;
+    background: url("../../../../audio_plus.png") no-repeat center/80%;
     &:focus {
       outline: none;
     }
